Fixed video on mobile

--- a/css/common.scss
+++ b/css/common.scss
@@ -113,4 +113,8 @@ footer {
     body {
         min-width: unset;
     }
+
+    figure {
+      img,iframe {flex-basis: 50vw;}
+    }
 }
